# simple_expense_tracker

./: README.md  expense_tracker.py  pyproject.toml
